Trying to add all libtcod dependencies to the project, and not the entire library... not so easy to get working it seems...

--- a/examples/ClanLib/AtharonRL/Sources/Server/CMakeLists.txt
+++ b/examples/ClanLib/AtharonRL/Sources/Server/CMakeLists.txt
@@ -56,7 +56,7 @@ if (MSVC)
    set_source_files_properties(precomp.cpp PROPERTIES COMPILE_FLAGS "/Ycprecomp.h")
 endif(MSVC)
 
-FIND_PACKAGE(LibTCOD REQUIRED)
+#FIND_PACKAGE(LibTCOD REQUIRED)
 TARGET_LINK_LIBRARIES(${NAME} 
 	debug ${CL_CORE_LIBRARY_DEBUG} 	 optimized ${CL_CORE_LIBRARY_RELEASE}
 	debug ${CL_DB_LIBRARY_DEBUG} 	 optimized ${CL_DB_LIBRARY_RELEASE}
@@ -66,7 +66,7 @@ TARGET_LINK_LIBRARIES(${NAME}
 	debug ${CL_DISPLAY_LIBRARY_DEBUG} 	optimized ${CL_DISPLAY_LIBRARY_RELEASE}
 	debug ${CL_GUI_LIBRARY_DEBUG} 		optimized ${CL_GUI_LIBRARY_RELEASE}
 	debug ${CL_CSS_LIBRARY_DEBUG} 		optimized ${CL_CSS_LIBRARY_RELEASE}
-	${TCOD_LIBRARY} ${TCOD_GUI_LIBRARY}
+	#${TCOD_LIBRARY} ${TCOD_GUI_LIBRARY}
 	Engine
 )
 
