--- a/examples/ClanLib/AtharonRL/Sources/Client/CMakeLists.txt
+++ b/examples/ClanLib/AtharonRL/Sources/Client/CMakeLists.txt
@@ -59,7 +59,7 @@ if (MSVC)
    set_source_files_properties(precomp.cpp PROPERTIES COMPILE_FLAGS "/Ycprecomp.h")
 endif(MSVC)
 
-FIND_PACKAGE(LibTCOD REQUIRED)
+#FIND_PACKAGE(LibTCOD REQUIRED)
 TARGET_LINK_LIBRARIES(${NAME} 
 	debug ${CL_APP_LIBRARY_DEBUG} 	 	optimized ${CL_APP_LIBRARY_RELEASE}
 	debug ${CL_CORE_LIBRARY_DEBUG} 	 	optimized ${CL_CORE_LIBRARY_RELEASE}
@@ -72,7 +72,7 @@ TARGET_LINK_LIBRARIES(${NAME}
 	debug ${CL_VORBIS_LIBRARY_DEBUG} 	optimized ${CL_VORBIS_LIBRARY_RELEASE}
 	debug ${CL_GUI_LIBRARY_DEBUG} 		optimized ${CL_GUI_LIBRARY_RELEASE}
 	debug ${CL_CSS_LIBRARY_DEBUG} 		optimized ${CL_CSS_LIBRARY_RELEASE}
-	${TCOD_LIBRARY} ${TCOD_GUI_LIBRARY}
+	#${TCOD_LIBRARY} ${TCOD_GUI_LIBRARY}
 	Engine
 )
 
