--- a/examples/ClanLib/AtharonRL/Sources/Engine/CMakeLists.txt
+++ b/examples/ClanLib/AtharonRL/Sources/Engine/CMakeLists.txt
@@ -49,6 +49,12 @@ file(GLOB HEADER_FILES_SERVER_GAMEWORLD Server/GameWorld/*.h)
 file(GLOB SOURCE_FILES_SERVER_GAMEWORLD Server/GameWorld/*.cpp)
 SOURCE_GROUP("Source Files\\Server\\GameWorld\\" FILES ${HEADER_FILES_SERVER_GAMEWORLD} ${SOURCE_FILES_SERVER_GAMEWORLD})
 
+file(GLOB HEADER_FILES_SERVER_GAMEWORLD_TCOD Server/GameWorld/LibTCOD/*.h)
+file(GLOB HEADER_FILES_SERVER_GAMEWORLD_TCOD2 Server/GameWorld/LibTCOD/*.hpp)
+file(GLOB SOURCE_FILES_SERVER_GAMEWORLD_TCOD Server/GameWorld/LibTCOD/*.cpp)
+file(GLOB SOURCE_FILES_SERVER_GAMEWORLD_TCOD2 Server/GameWorld/LibTCOD/*.inl)
+SOURCE_GROUP("Source Files\\Server\\GameWorld\\LibTCOD\\" FILES ${HEADER_FILES_SERVER_GAMEWORLD_TCOD} ${SOURCE_FILES_SERVER_GAMEWORLD_TCOD} ${HEADER_FILES_SERVER_GAMEWORLD_TCOD2} ${SOURCE_FILES_SERVER_GAMEWORLD_TCOD2})
+
 FIND_PACKAGE(ClanLib REQUIRED)
 file(GLOB CL_HEADER ${CL_DIR}/*.h)
 SOURCE_GROUP("Source Files\\Include\\ClanLib" FILES ${CL_HEADER})
@@ -64,6 +70,8 @@ add_library(${NAME} STATIC
 	${HEADER_FILES_COMMON_NETWORK} ${SOURCE_FILES_COMMON_NETWORK}
 	${HEADER_FILES_COMMON_PERF} ${SOURCE_FILES_COMMON_PERF}
 	${HEADER_FILES_SERVER_GAMEWORLD} ${SOURCE_FILES_SERVER_GAMEWORLD}
+	${HEADER_FILES_SERVER_GAMEWORLD_TCOD} ${SOURCE_FILES_SERVER_GAMEWORLD_TCOD}
+	${HEADER_FILES_SERVER_GAMEWORLD_TCOD2} ${SOURCE_FILES_SERVER_GAMEWORLD_TCOD2}
 	${TOTEM_HEADER} 
 	${CL_HEADER})
 
@@ -74,7 +82,7 @@ if (MSVC)
    set_source_files_properties(precomp.cpp PROPERTIES COMPILE_FLAGS "/Ycprecomp.h")
 endif(MSVC)
 
-FIND_PACKAGE(LibTCOD REQUIRED)
+#FIND_PACKAGE(LibTCOD REQUIRED)
 TARGET_LINK_LIBRARIES(${NAME} 
 	debug ${CL_CORE_LIBRARY_DEBUG} 	 optimized ${CL_CORE_LIBRARY_RELEASE}
 	debug ${CL_DISPLAY_LIBRARY_DEBUG} 	optimized ${CL_DISPLAY_LIBRARY_RELEASE}
@@ -83,7 +91,7 @@ TARGET_LINK_LIBRARIES(${NAME}
 	debug ${CL_SQ_LIBRARY_DEBUG} 	 optimized ${CL_SQ_LIBRARY_RELEASE}
 	debug ${CL_SOUND_LIBRARY_DEBUG} optimized ${CL_SOUND_LIBRARY_RELEASE}
 	debug ${CL_VORBIS_LIBRARY_DEBUG} optimized ${CL_VORBIS_LIBRARY_RELEASE}
-	${TCOD_LIBRARY} ${TCOD_GUI_LIBRARY}
+	#${TCOD_LIBRARY} ${TCOD_GUI_LIBRARY}
 )
 
 INCLUDE_DIRECTORIES(
