--- a/trunk/examples/ClanLib/AtharonRL/Sources/Engine/CMakeLists.txt
+++ b/trunk/examples/ClanLib/AtharonRL/Sources/Engine/CMakeLists.txt
@@ -49,11 +49,11 @@ file(GLOB HEADER_FILES_SERVER_GAMEWORLD Server/GameWorld/*.h)
 file(GLOB SOURCE_FILES_SERVER_GAMEWORLD Server/GameWorld/*.cpp)
 SOURCE_GROUP("Source Files\\Server\\GameWorld\\" FILES ${HEADER_FILES_SERVER_GAMEWORLD} ${SOURCE_FILES_SERVER_GAMEWORLD})
 
-file(GLOB HEADER_FILES_SERVER_GAMEWORLD_TCOD Server/GameWorld/LibTCOD/*.h)
-file(GLOB HEADER_FILES_SERVER_GAMEWORLD_TCOD2 Server/GameWorld/LibTCOD/*.hpp)
-file(GLOB SOURCE_FILES_SERVER_GAMEWORLD_TCOD Server/GameWorld/LibTCOD/*.cpp)
-file(GLOB SOURCE_FILES_SERVER_GAMEWORLD_TCOD2 Server/GameWorld/LibTCOD/*.inl)
-SOURCE_GROUP("Source Files\\Server\\GameWorld\\LibTCOD\\" FILES ${HEADER_FILES_SERVER_GAMEWORLD_TCOD} ${SOURCE_FILES_SERVER_GAMEWORLD_TCOD} ${HEADER_FILES_SERVER_GAMEWORLD_TCOD2} ${SOURCE_FILES_SERVER_GAMEWORLD_TCOD2})
+#file(GLOB HEADER_FILES_SERVER_GAMEWORLD_TCOD Server/GameWorld/LibTCOD/*.h)
+#file(GLOB HEADER_FILES_SERVER_GAMEWORLD_TCOD2 Server/GameWorld/LibTCOD/*.hpp)
+#file(GLOB SOURCE_FILES_SERVER_GAMEWORLD_TCOD Server/GameWorld/LibTCOD/*.cpp)
+#file(GLOB SOURCE_FILES_SERVER_GAMEWORLD_TCOD2 Server/GameWorld/LibTCOD/*.inl)
+#SOURCE_GROUP("Source Files\\Server\\GameWorld\\LibTCOD\\" FILES ${HEADER_FILES_SERVER_GAMEWORLD_TCOD} ${SOURCE_FILES_SERVER_GAMEWORLD_TCOD} ${HEADER_FILES_SERVER_GAMEWORLD_TCOD2} ${SOURCE_FILES_SERVER_GAMEWORLD_TCOD2})
 
 FIND_PACKAGE(ClanLib REQUIRED)
 file(GLOB CL_HEADER ${CL_DIR}/*.h)
@@ -70,8 +70,8 @@ add_library(${NAME} STATIC
 	${HEADER_FILES_COMMON_NETWORK} ${SOURCE_FILES_COMMON_NETWORK}
 	${HEADER_FILES_COMMON_PERF} ${SOURCE_FILES_COMMON_PERF}
 	${HEADER_FILES_SERVER_GAMEWORLD} ${SOURCE_FILES_SERVER_GAMEWORLD}
-	${HEADER_FILES_SERVER_GAMEWORLD_TCOD} ${SOURCE_FILES_SERVER_GAMEWORLD_TCOD}
-	${HEADER_FILES_SERVER_GAMEWORLD_TCOD2} ${SOURCE_FILES_SERVER_GAMEWORLD_TCOD2}
+	#${HEADER_FILES_SERVER_GAMEWORLD_TCOD} ${SOURCE_FILES_SERVER_GAMEWORLD_TCOD}
+	#${HEADER_FILES_SERVER_GAMEWORLD_TCOD2} ${SOURCE_FILES_SERVER_GAMEWORLD_TCOD2}
 	${TOTEM_HEADER} 
 	${CL_HEADER})
 
