--- a/trunk/examples/Standard/CMakeLists.txt
+++ b/trunk/examples/Standard/CMakeLists.txt
@@ -26,5 +26,6 @@
 set(BUILD_ROGUELIKE_EXAMPLE FALSE CACHE BOOL "TRUE to include a Roguelike example project (advanced). NOTE: This depends on LibTCOD!")
 
 if(BUILD_ROGUELIKE_EXAMPLE)
-	add_subdirectory(Roguelike)
+	#add_subdirectory(Roguelike)
+	add_subdirectory(RoguelikeClean)
 endif()
