Finished the parser more or less, now working on the turn system to make walking work.

--- a/bin/resources/Standard/Roguelike/Entities.cfg
+++ b/bin/resources/Standard/Roguelike/Entities.cfg
@@ -1,7 +1,16 @@
 entity "human"
 {
+	tags
+	{
+		Playable
+	}
+	
 	//Set the component flags that define this entity
-	Actor
+	components
+	{
+		Visual
+		Actor
+	}
 	
 	//set attribute values relative to the defined base values in Stats.cfg
 	//strength, dexterity, constitution
@@ -14,4 +23,11 @@ entity "human"
 	//set skill values relative to the defined base values in Stats.cfg
 	//walk
 	skills=[0]
+	
+	//Other properties
+	Level=0
+	ExperienceToSpend=0
+	CanvasLayer=0
+	Symbol='@'
+	ForegroundColor="#FFFFFF"
 }
