--- a/bin/resources/Standard/Roguelike/Entities.cfg
+++ b/bin/resources/Standard/Roguelike/Entities.cfg
@@ -27,8 +27,8 @@ entity "human"
 	//Other properties
 	Level=0
 	ExperienceToSpend=0
-	CanvasLayer=0
+	CanvasLayer=4	//LAYER_MAP=0, LAYER_CLUTTER=1, LAYER_ITEM=2, LAYER_CORPSE=3, LAYER_ACTOR=4
 	Symbol='@'
 	ForegroundColor="#FFFFFF"
-	Position=[43,10]
+	Position=[40,24]
 }
