Got map rendering working, however I'm not 100% on top of how to treat canvas layers and blit'ing yet...

--- a/bin/resources/Standard/Roguelike/Entities.cfg
+++ b/bin/resources/Standard/Roguelike/Entities.cfg
@@ -27,7 +27,7 @@ entity "human"
 	//Other properties
 	Level=0
 	ExperienceToSpend=0
-	CanvasLayer=4	//LAYER_MAP=0, LAYER_CLUTTER=1, LAYER_ITEM=2, LAYER_CORPSE=3, LAYER_ACTOR=4
+	CanvasLayer=0	//LAYER_GROUND=0, LAYER_CLUTTER=1, LAYER_ITEM=2, LAYER_CORPSE=3, LAYER_ACTOR=4, LAYER_AIR=5
 	Symbol='@'
 	ForegroundColor="#FFFFFF"
 	Position=[40,24]
