--- a/bin/resources/Standard/Roguelike/Maps.cfg
+++ b/bin/resources/Standard/Roguelike/Maps.cfg
@@ -3,10 +3,10 @@ map "ground"
 	layer=0		//LAYER_GROUND=0, LAYER_AIR=1
 	width=80
 	height=50
-	wallInViewColor="#AAA000"
-	groundInViewColor="#FFF000"
-	wallInMemoryColor="#000AAA"
-	groundInMemoryColor="#000FFF"
+	wallInViewColor="#424243"
+	groundInViewColor="#848484"
+	wallInMemoryColor="#131314"
+	groundInMemoryColor="#1a1a1a"
 }
 
 map "air"
@@ -14,8 +14,8 @@ map "air"
 	layer=1		//LAYER_GROUND=0, LAYER_AIR=1
 	width=80
 	height=50
-	wallInViewColor="#AAA000"
-	groundInViewColor="#FFF000"
-	wallInMemoryColor="#000AAA"
-	groundInMemoryColor="#000FFF"
+	wallInViewColor="#A58D43"
+	groundInViewColor="#ECCA61"
+	wallInMemoryColor="#404679"
+	groundInMemoryColor="#535886"
 }
