Started on bsp map generation.

--- a/bin/resources/Standard/Roguelike/Maps.cfg
+++ b/bin/resources/Standard/Roguelike/Maps.cfg
@@ -3,6 +3,7 @@ map "ground"
 	layer=0		//LAYER_GROUND=0, LAYER_AIR=1
 	width=80
 	height=50
+	generationType=1	//GENERATION_NONE=0, GENERATION_BSP=1
 	wallInViewColor="#424243"
 	groundInViewColor="#848484"
 	wallInMemoryColor="#131314"
@@ -14,6 +15,7 @@ map "air"
 	layer=1		//LAYER_GROUND=0, LAYER_AIR=1
 	width=80
 	height=50
+	generationType=0	//GENERATION_NONE=0, GENERATION_BSP=1
 	wallInViewColor="#A58D43"
 	groundInViewColor="#ECCA61"
 	wallInMemoryColor="#404679"
