Basic dungeon generation is now working.

--- a/bin/resources/Standard/Roguelike/Maps.cfg
+++ b/bin/resources/Standard/Roguelike/Maps.cfg
@@ -6,8 +6,8 @@ map "ground"
 	generationType=1	//GENERATION_NONE=0, GENERATION_BSP=1
 	wallInViewColor="#424243"
 	groundInViewColor="#848484"
-	wallInMemoryColor="#131314"
-	groundInMemoryColor="#1a1a1a"
+	wallInMemoryColor="#1a1a1a"
+	groundInMemoryColor="#272727"
 }
 
 map "air"
