--- a/trunk/bin/resources/Standard/Roguelike/Entities.cfg
+++ b/trunk/bin/resources/Standard/Roguelike/Entities.cfg
@@ -105,3 +105,21 @@ entity "troll"
 	Position=[40,24]
 	SightRadius=6
 }
+
+entity "corpse"
+{
+	tags
+	{
+	}
+	
+	//Set the component flags that define this entity
+	components
+	{
+		Visual
+	}
+	
+	//Other properties
+	CanvasLayer=3	//LAYER_GROUND=0, LAYER_CLUTTER=1, LAYER_ITEM=2, LAYER_CORPSE=3, LAYER_ACTOR=4, LAYER_AIR=5
+	Symbol='%'
+	ForegroundColor="#8b0000"
+}
