Started on the AI part of this project. Need to instantiate the AgentManager in GameManager, and need to add a Sentient component, or some such, that creates a new Agent instance and adds it to the AgentManager, registering it's Owner as minion of the Agent in the process. When that's done, this should pretty much work :)

--- a/bin/resources/Standard/Roguelike/Entities.cfg
+++ b/bin/resources/Standard/Roguelike/Entities.cfg
@@ -105,3 +105,21 @@ entity "troll"
 	Position=[40,24]
 	SightRadius=6
 }
+
+entity "corpse"
+{
+	tags
+	{
+	}
+	
+	//Set the component flags that define this entity
+	components
+	{
+		Visual
+	}
+	
+	//Other properties
+	CanvasLayer=3	//LAYER_GROUND=0, LAYER_CLUTTER=1, LAYER_ITEM=2, LAYER_CORPSE=3, LAYER_ACTOR=4, LAYER_AIR=5
+	Symbol='%'
+	ForegroundColor="#8b0000"
+}
