--- a/bin/resources/Standard/Roguelike/Stats.cfg
+++ b/bin/resources/Standard/Roguelike/Stats.cfg
@@ -45,3 +45,17 @@ skill "walk"
 	modifierNames=["strength", "dexterity", "constitution"]
 	modifierValues=[0.05, 0.10, 0.85]
 }
+
+skill "hit"
+{
+	description="Your skill at hitting someone!"
+	experienceAwardedForUse=2
+	experienceToLevelUp=50
+	levelModifier=2.0
+	baseValue=0
+	cost=14
+	cooldown=30
+	activated=true
+	modifierNames=["strength", "dexterity", "constitution"]
+	modifierValues=[0.85, 0.15, 0.0]
+}
