--- a/examples/Standard/Basic/CMakeLists.txt
+++ b/examples/Standard/Basic/CMakeLists.txt
@@ -23,11 +23,7 @@
 #
 ###
 
-set(BUILD_ROGUELIKE_EXAMPLE FALSE CACHE BOOL "TRUE to include a Roguelike example project (advanced). NOTE: This depends on LibTCOD!")
-
-if(BUILD_ROGUELIKE_EXAMPLE)
-	#add_subdirectory(Roguelike)
-	add_subdirectory(RoguelikeClean)
-endif()
-
-add_subdirectory(Basic)
+add_subdirectory(BasicComponent)
+add_subdirectory(BasicProperty)
+add_subdirectory(BasicPropertyAndComponent)
+add_subdirectory(BasicRtti)
